[gd_scene load_steps=15 format=2]

[ext_resource path="res://buttonhover.png" type="Texture" id=1]
[ext_resource path="res://button.png" type="Texture" id=2]
[ext_resource path="res://Menu.gd" type="Script" id=3]
[ext_resource path="res://NicoBold-Regular.otf" type="DynamicFontData" id=4]
[ext_resource path="res://background_espaco.jpg" type="Texture" id=5]
[ext_resource path="res://cursor.png" type="Texture" id=6]
[ext_resource path="res://arrow.png" type="Texture" id=7]
[ext_resource path="res://back.png" type="Texture" id=8]
[ext_resource path="res://backhover.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 100
outline_size = 8
outline_color = Color( 0.0156863, 0.72549, 0.788235, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 50
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 25
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="Menu" type="Node2D"]
script = ExtResource( 3 )

[node name="StartButton" type="TextureButton" parent="."]
margin_left = 288.0
margin_top = 528.0
margin_right = 432.0
margin_bottom = 576.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 1 )

[node name="StartText" type="Label" parent="StartButton"]
margin_right = 144.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
text = "START"
align = 1
valign = 1

[node name="ControlsButton" type="TextureButton" parent="."]
margin_left = 272.0
margin_top = 592.0
margin_right = 416.0
margin_bottom = 640.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 1 )

[node name="ControlsText" type="Label" parent="ControlsButton"]
margin_right = 152.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 2 )
text = "CONTROLS"
align = 1
valign = 1

[node name="Title" type="Label" parent="."]
margin_top = 80.0
margin_right = 704.0
margin_bottom = 386.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "ULTIMATE STAR BATTLE"
align = 1
autowrap = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 0, 760 )

[node name="Space" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
scale = Vector2( 1.36965, 2.11111 )
texture = ExtResource( 5 )
centered = false

[node name="ControlsScreen" type="ColorRect" parent="."]
margin_left = 64.0
margin_top = 32.0
margin_right = 640.0
margin_bottom = 672.0
color = Color( 0.0156863, 0.72549, 0.788235, 1 )

[node name="Instructions" type="Label" parent="ControlsScreen"]
margin_right = 576.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 4 )
text = "Use the mouse to play!"
align = 1
valign = 1
autowrap = true

[node name="Move" type="Label" parent="ControlsScreen"]
margin_left = 16.0
margin_top = 120.0
margin_right = 560.0
margin_bottom = 336.0
custom_fonts/font = SubResource( 5 )
text = "Move the mouse horizontally to move the spaceship"
align = 1
valign = 1
autowrap = true

[node name="LeftClick" type="Label" parent="ControlsScreen"]
margin_left = 16.0
margin_top = 440.0
margin_right = 560.0
margin_bottom = 656.0
custom_fonts/font = SubResource( 5 )
text = "Shoot the enemy spaceships

Left Click = Shoot!
(there's a 0.5 sec cooldown)"
align = 1
valign = 1
autowrap = true

[node name="Cursor" type="Sprite" parent="ControlsScreen"]
position = Vector2( 288, 376 )
scale = Vector2( 4.6875, 4.4375 )
texture = ExtResource( 6 )

[node name="Arrow" type="Sprite" parent="ControlsScreen"]
position = Vector2( 120, 376 )
texture = ExtResource( 7 )
flip_h = true

[node name="Arrow2" type="Sprite" parent="ControlsScreen"]
position = Vector2( 456, 376 )
texture = ExtResource( 7 )

[node name="BackButton" type="TextureButton" parent="ControlsScreen"]
margin_left = -72.0
margin_top = 632.0
margin_right = 56.0
margin_bottom = 760.0
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 9 )

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="ControlsButton" to="." method="_on_ControlsButton_pressed"]
[connection signal="pressed" from="ControlsScreen/BackButton" to="." method="_on_BackButton_pressed"]
